// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="jsx-1756277576 measure measure-wide-l center sans-serif ph2 "
>
  <h1
    className="jsx-1756277576 lh-title fw1 f2 pb3-l mb4-l"
  >
    <a
      className="jsx-1756277576 no-underline"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <img
        alt="illustration by supasavina"
        className="jsx-1756277576 mr2 h3 v-mid"
        src="/logo.png"
      />
      melkat.link
    </a>
  </h1>
  <footer
    className="jsx-1756277576 lh-copy tc"
  >
    <p
      className="jsx-1756277576"
    >
      a link blog by 
      <a
        className="jsx-1756277576"
        href="https://melaniekat.com"
        rel="me"
      >
        melanie kat
      </a>
       &lt;3
    </p>
    <p
      className="jsx-1756277576"
    >
      logo by 
      <a
        className="jsx-1756277576"
        href="https://www.savinaxu.com"
      >
        savina xu
      </a>
       • 
      links from 
      <a
        className="jsx-1756277576"
        href="https://raindrop.io/collection/9554731"
        rel="me"
      >
        raindrop.io
      </a>
    </p>
  </footer>
</main>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="jsx-1756277576 measure measure-wide-l center sans-serif ph2 "
>
  <h1
    className="jsx-1756277576 lh-title fw1 f2 pb3-l mb4-l"
  >
    <a
      className="jsx-1756277576 no-underline"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <img
        alt="illustration by supasavina"
        className="jsx-1756277576 mr2 h3 v-mid"
        src="/logo.png"
      />
      melkat.link
    </a>
  </h1>
  <b>
    #content
  </b>
  <footer
    className="jsx-1756277576 lh-copy tc"
  >
    <p
      className="jsx-1756277576"
    >
      a link blog by 
      <a
        className="jsx-1756277576"
        href="https://melaniekat.com"
        rel="me"
      >
        melanie kat
      </a>
       &lt;3
    </p>
    <p
      className="jsx-1756277576"
    >
      logo by 
      <a
        className="jsx-1756277576"
        href="https://www.savinaxu.com"
      >
        savina xu
      </a>
       • 
      links from 
      <a
        className="jsx-1756277576"
        href="https://raindrop.io/collection/9554731"
        rel="me"
      >
        raindrop.io
      </a>
    </p>
  </footer>
</main>
`;
